# python-project-52

./: .codeclimate.yml  .env  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
main/: urls.py  views.py
main/templates/main/: base.html  index.html
task/: settings.py  urls.py  views.py
task/marks/: apps.py  forms.py  tests.py  urls.py  views.py
task/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task/statuses/migrations/: 0001_initial.py
task/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task/tasks/migrations/: 0002_alter_task_author.py  0003_alter_task_author_alter_task_executor_and_more.py  0005_alter_task_label.py  0006_alter_task_label.py
task/templates/task/: base.html  index.html  login.html
task/users/: forms.py  models.py  tests.py  urls.py  views.py
task/utils/: mixin.py
task_manager/: settings.py  urls.py  views.py
task_manager/marks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/marks/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0004_alter_task_unique_together.py  0007_alter_task_executor.py  0008_alter_task_description.py  0009_remove_task_label_task_labels.py  (+1 more)
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/utils/: mixin.py
(+33 files in other folders)
